adaptiv section reviews

--- a/app/html/home/_reviews.html
+++ b/app/html/home/_reviews.html
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="reviews__column">
+      <div class="reviews__column last">
         <div class="reviews__card six">
           <div class="reviews__user">
             <img class="reviews__avatar" src="images/users/4.png" alt="user avatar" width="48" height="48">
