adaptiv section home

--- a/app/html/home/_home.html
+++ b/app/html/home/_home.html
@@ -24,7 +24,7 @@
       </li>
     </ul>
     <div class="info">
-      <p>
+      <p class="info__text">
         Discover courses curated by industry experts, designed to equip you with the
         knowledge and skills needed to thrive in today's dynamic world.
       </p>
