--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
       </li>
     </ul>
     <div class="info">
-      <p>
+      <p class="info__text">
         Discover courses curated by industry experts, designed to equip you with the
         knowledge and skills needed to thrive in today's dynamic world.
       </p>
@@ -71,7 +71,7 @@
   <span class="nav__dot"></span>
   <img class="nav__logo" src="images/icons/logo.svg" width="104" height="18" alt="logo">
 </nav>
-  <section class="advantages indent">
+  <section class="advantages">
   <div class="container">
     <h2 class="title title-section">Advantages of the Project</h2>
     <ul class="advantages__list">
