--- a/app/html/home/_advantages.html
+++ b/app/html/home/_advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages" id="advantages">
   <div class="container">
     <h2 class="title title-section">Advantages of the Project</h2>
     <ul class="advantages__list">
