--- a/app/html/home/_connected.html
+++ b/app/html/home/_connected.html
@@ -1,4 +1,4 @@
-<section class="connected indent">
+<section class="connected indent" id="connected">
   <div class="container">
     <h2 class="connected__title title title-section">Stay Connected with InnovateX!</h2>
     <form class="connected__form" method="post" action="">
