--- a/app/html/home/_home.html
+++ b/app/html/home/_home.html
@@ -1,4 +1,4 @@
-<section class="home">
+<section class="home" id="home">
   <div class="container">
     <h1 class="home__title title">
       At InnovateX, we offer a diverse range of interactive courses tailored to suit your interests and goals in:
