--- a/app/html/home/_reviews.html
+++ b/app/html/home/_reviews.html
@@ -1,11 +1,11 @@
-<section class="reviews indent">
+<section class="reviews indent" id="reviews">
   <div class="container">
     <div class="reviews__columns">
       <div class="reviews__more">
         <h2 class="reviews__title title title-section">
           Hear What Our Learners Have to Say About InnovateX
         </h2>
-        <a class="btn btn--light-green" href="" target="_blank">Learn more</a>
+        <a class="btn btn--light-green" href="https://x.com/InnovateXUS" target="_blank">Learn more</a>
       </div>
       <div class="reviews__column">
         <div class="reviews__card one">
