--- a/app/html/home/_advantages.html
+++ b/app/html/home/_advantages.html
@@ -26,7 +26,7 @@
             Acquire in-demand skills and certifications to enhance your career prospects
             and stay ahead in today's competitive job market.
           </p>
-          <button class="advantages__btn btn" type="button">Learn more</button>
+          <a class="advantages__btn btn" href="#footer">Learn more</a>
         </div>
         <img class="advantages__decor" src="images/access.svg" alt="decor image">
       </li>
