--- a/app/html/home/_home.html
+++ b/app/html/home/_home.html
@@ -29,7 +29,7 @@
         knowledge and skills needed to thrive in today's dynamic world.
       </p>
       <div class="info__actions">
-        <button class="btn" type="button">Learn more</button>
+        <a class="btn" href="#footer">Learn more</a>
         <a class="btn btn--light-green" href="#reviews">Reviews</a>
       </div>
     </div>
