--- a/app/html/home/_reviews.html
+++ b/app/html/home/_reviews.html
@@ -10,84 +10,84 @@
       <div class="reviews__column">
         <div class="reviews__card one">
           <div class="reviews__user">
-            <img class="reviews__avatar" src="images/users/2.png" alt="user avatar" width="48" height="48">
+            <img class="reviews__avatar" src="images/users/1.jpg" alt="user avatar" width="48" height="48">
             <div class="reviews__info">
-              <div class="reviews__name">John M.</div>
+              <div class="reviews__name">Ava M.</div>
               <div class="reviews__content">
-                <span class="reviews__username">@username</span>
+                <span class="reviews__username">@pettigiani</span>
                 <span class="reviews__dot"></span>
-                <span class="reviews__date">3d. ago</span>
+                <span class="reviews__date">5d. ago</span>
               </div>
             </div>
           </div>
           <p class="reviews__text">
-            InnovateX has been a game-changer for me. The courses are engaging, relevant,
-            and taught by industry experts. I've been able to upskill in areas I never thought possible!
+            InnovateX is incredible! The courses are not only informative but also fun to engage with. Highly recommend
+            for anyone looking to stay ahead in today's fast-paced tech world!
           </p>
         </div>
         <div class="reviews__card two">
           <div class="reviews__user">
-            <img class="reviews__avatar" src="images/users/3.png" alt="user avatar" width="48" height="48">
+            <img class="reviews__avatar" src="images/users/2.jpeg" alt="user avatar" width="48" height="48">
             <div class="reviews__info">
-              <div class="reviews__name">Herion S.</div>
+              <div class="reviews__name">Ethan B.</div>
               <div class="reviews__content">
-                <span class="reviews__username">@username</span>
+                <span class="reviews__username">@EthanB_</span>
                 <span class="reviews__dot"></span>
-                <span class="reviews__date">3d. ago</span>
+                <span class="reviews__date">22d. ago</span>
               </div>
             </div>
           </div>
           <p class="reviews__text">
-            The support and resources available on InnovateX have been invaluable in my professional development
-            journey. I highly recommend it to anyone looking to advance their career.
+            Impressed with InnovateX! The courses are top-notch, covering a wide range of topics. The platform is
+            user-friendly, making learning a breeze. Thanks for helping me level up my skills!
           </p>
         </div>
       </div>
       <div class="reviews__column reviews__column--big">
         <div class="reviews__card three">
           <div class="reviews__user">
-            <img class="reviews__avatar" src="images/users/2.png" alt="user avatar" width="48" height="48">
+            <img class="reviews__avatar" src="images/users/5.jpg" alt="user avatar" width="48" height="48">
             <div class="reviews__info">
-              <div class="reviews__name">John M.</div>
+              <div class="reviews__name">Olivia S.</div>
               <div class="reviews__content">
-                <span class="reviews__username">@username</span>
+                <span class="reviews__username">@OliviaS_SkillBoost</span>
                 <span class="reviews__dot"></span>
-                <span class="reviews__date">3d. ago</span>
+                <span class="reviews__date">2d. ago</span>
               </div>
             </div>
           </div>
           <p class="reviews__text">
-            InnovateX has been a game-changer for me. The courses are engaging, relevant,
-            and taught by industry experts. I've been able to upskill in areas I never thought possible!
+            InnovateX exceeded my expectations! The instructors are knowledgeable, and the content
+            is always up-to-date. I've gained valuable skills that have boosted my career prospects. Kudos to the team
           </p>
         </div>
         <div class="reviews__cards">
           <div class="reviews__card four">
             <div class="reviews__user">
-              <img class="reviews__avatar" src="images/users/6.png" alt="user avatar" width="48" height="48">
+              <img class="reviews__avatar" src="images/users/3.jpg" alt="user avatar" width="48" height="48">
               <div class="reviews__info">
-                <div class="reviews__name">John M.</div>
+                <div class="reviews__name">Liam H.</div>
                 <div class="reviews__content">
-                  <span class="reviews__username">@username</span>
+                  <span class="reviews__username">@liamhuang</span>
                   <span class="reviews__dot"></span>
-                  <span class="reviews__date">3d. ago</span>
+                  <span class="reviews__date">6d. ago</span>
                 </div>
               </div>
             </div>
             <p class="reviews__text">
-              InnovateX has been a game-changer for me. The courses are engaging, relevant,
-              and taught by industry experts. I've been able to upskill in areas I never thought possible!
+              I can't recommend InnovateX enough! The variety of courses available is impressive,
+              and the interactive elements make learning enjoyable. Thank you for providing such material!
             </p>
           </div>
           <div class="reviews__card five">
             <div class="reviews__user">
-              <img class="reviews__avatar" src="images/users/6.png" alt="user avatar" width="48" height="48">
+              <img class="reviews__avatar" src="images/users/4.jpg" alt="user avatar" width="48" height="48">
               <div class="reviews__info">
-                <div class="reviews__name">John M.</div>
+                <div class="reviews__name">Gabriel L.</div>
                 <div class="reviews__content">
-                  <span class="reviews__username">@username</span>
+                  <span class="reviews__username">@lucifar</span>
                   <span class="reviews__dot"></span>
-                  <span class="reviews__date">3d. ago</span>
+                  <span class="reviews__date">1d. ago</span>
                 </div>
               </div>
             </div>
@@ -101,30 +101,30 @@
       <div class="reviews__column last">
         <div class="reviews__card six">
           <div class="reviews__user">
-            <img class="reviews__avatar" src="images/users/4.png" alt="user avatar" width="48" height="48">
+            <img class="reviews__avatar" src="images/users/6.jpg" alt="user avatar" width="48" height="48">
             <div class="reviews__info">
-              <div class="reviews__name">John M.</div>
+              <div class="reviews__name">Noah L.</div>
               <div class="reviews__content">
-                <span class="reviews__username">@username</span>
+                <span class="reviews__username">@satourvar</span>
                 <span class="reviews__dot"></span>
                 <span class="reviews__date">3d. ago</span>
               </div>
             </div>
           </div>
           <p class="reviews__text">
-            InnovateX has been a game-changer for me. The courses are engaging, relevant,
-            and taught by industry experts. I've been able to upskill in areas I never thought possible!
+            InnovateX has been my go-to platform for upskilling! The courses are well-structured, and the assessments
+            help reinforce learning. I've already seen a positive impact on my career. Thanks, InnovateX team
           </p>
         </div>
         <div class="reviews__card seven">
           <div class="reviews__user">
-            <img class="reviews__avatar" src="images/users/5.png" alt="user avatar" width="48" height="48">
+            <img class="reviews__avatar" src="images/users/7.jpg" alt="user avatar" width="48" height="48">
             <div class="reviews__info">
-              <div class="reviews__name">Herion S.</div>
+              <div class="reviews__name">Kevin J.</div>
               <div class="reviews__content">
-                <span class="reviews__username">@username</span>
+                <span class="reviews__username">@qUNAyin</span>
                 <span class="reviews__dot"></span>
-                <span class="reviews__date">3d. ago</span>
+                <span class="reviews__date">9d. ago</span>
               </div>
             </div>
           </div>
